--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,8 +28,8 @@
     border-color: yellow;
 }
 .myinterests h1{
-	text-decoration: underline;
-	color: yellow;
+	text-decoration: none;
+	color: Black;
 }
 .socialnetworks h1{
 	font-size: 35px;
